--- a/src/components/Accordion/sgds-accordion-item.scss
+++ b/src/components/Accordion/sgds-accordion-item.scss
@@ -14,7 +14,7 @@
 
 .accordion-content {
   display: block;
-  padding: var(--accordion-item-padding-y) var(--accordion-item-padding-x);
+  padding: 0 var(--accordion-item-padding-x) var(--accordion-item-padding-y);
 }
 
 .accordion-button {
