--- a/src/components/Button/sgds-button.scss
+++ b/src/components/Button/sgds-button.scss
@@ -1,25 +1,28 @@
-
 :host {
-    display: inline-block;
+  display: inline-block;
 }
 
-.btn-icon{
+.btn-icon {
   background: transparent;
   border: 0;
-  &:hover{
+  &:hover {
     background: transparent;
   }
 }
-:host(.button-group_button-first){
-  .btn{
+:host(.button-group_button-first) {
+  .btn {
     border-start-end-radius: 0;
     border-end-end-radius: 0;
   }
 }
 
-:host(.button-group_button-last){
-  .btn{
+:host(.button-group_button-last) {
+  .btn {
     border-start-start-radius: 0;
     border-end-start-radius: 0;
   }
+}
+
+::slotted(svg) {
+  margin-right: 0.5rem;
 }
