feat(action-card): add form functionalities and handle radio behaviours when action-card is a radio

--- a/src/components/ActionCard/sgds-action-card.scss
+++ b/src/components/ActionCard/sgds-action-card.scss
@@ -3,8 +3,7 @@
     &.card {
       &[variant*="card-action"] {
         .card-body {
-          sl-icon {
-            font-size: 1.5rem;
+          ::slotted(svg) {
             margin-right: 1rem;
           }
         }
