style(*): add global styles for fonts

--- a/src/base/sgds-element.scss
+++ b/src/base/sgds-element.scss
@@ -1,2 +1,9 @@
 
 @import "~@govtechsg/sgds/sass/sgds.scss";
+
+:host {
+    font-family: $font-family-sans-serif;
+    font-size: $font-size-base;
+    font-weight: $font-weight-base;
+    line-height: $line-height-base;
+}
