refactor(sgds-element): set default custom variable to sass variable value

--- a/src/base/sgds-element.scss
+++ b/src/base/sgds-element.scss
@@ -2,8 +2,8 @@
 @import "~@govtechsg/sgds/sass/sgds.scss";
 
 :host {
-    font-family: $font-family-sans-serif;
-    font-size: $font-size-base;
-    font-weight: $font-weight-base;
-    line-height: $line-height-base;
+    font-family: var(--sgds-body-font-family, $font-family-sans-serif);
+    font-size: var(--sgds-body-font-size, $font-size-base);
+    font-weight: var(--sgds-body-font-weight, $font-weight-base);
+    line-height: var(--sgds-body-line-height, $line-height-base);
 }
