--- a/src/components/Input/sgds-input.scss
+++ b/src/components/Input/sgds-input.scss
@@ -1,16 +1,11 @@
 :host {
   --sgds-body-line-height: 2rem;
-  --input-border-radius: .3125rem;
+  --input-border-radius: 0;
 }
+
 .form {
   &-label,
   &-text {
     line-height: var(--sgds-body-line-height);
   }
-}
-
-.form {
-    &-control {
-        border-radius: var(--input-border-radius);
-    }
 }
