--- a/src/components/Modal/sgds-modal.scss
+++ b/src/components/Modal/sgds-modal.scss
@@ -1,5 +1,3 @@
-// @import '../../utils/base.scss';
-//TODO: Double check with LT if still need the classes below 
   :host {
     --sgds-modal-width: 35rem;
     --sgds-modal-z-index: 1055;
@@ -49,74 +47,74 @@
     }
   }
 
-  .modal--open .modal-panel {
-    display: flex;
-    opacity: 1;
-    transform: none;
-  }
+  // .modal--open .modal-panel {
+  //   display: flex;
+  //   opacity: 1;
+  //   transform: none;
+  // }
 
-  .modal-header {
-    flex: 0 0 auto;
-    margin-bottom: 0.5rem;
-    margin-top: 0px;
-    font-weight: 700;
-    line-height: 1.33;
-    font-size: calc(1.275rem + 0.3vw);
-    display: flex;
-    padding: var(--sgds-modal-padding);
-    align-items: center;
-    border-bottom: var(--sgds-modal-border-width) solid var(--sgds-gray-400, #98a2b3);
-    &.centered{
-      border-bottom: 0;
-      padding-bottom: 0;
-      margin-bottom: 0;
-    }
-  }
+  // .modal-header {
+  //   flex: 0 0 auto;
+  //   margin-bottom: 0.5rem;
+  //   margin-top: 0px;
+  //   font-weight: 700;
+  //   line-height: 1.33;
+  //   font-size: calc(1.275rem + 0.3vw);
+  //   display: flex;
+  //   padding: var(--sgds-modal-padding);
+  //   align-items: center;
+  //   border-bottom: var(--sgds-modal-border-width) solid var(--sgds-gray-400, #98a2b3);
+  //   &.centered{
+  //     border-bottom: 0;
+  //     padding-bottom: 0;
+  //     margin-bottom: 0;
+  //   }
+  // }
 
-  .modal-title {
-    flex: 1 1 auto;
-    // @extend .h3;
-    // @extend .gap-3;
-    gap: 1rem;
-    margin: 0;
-    &.centered{
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      // @extend .justify-content-center; 
-      // @extend .flex-column; 
-      // @extend .text-center; 
-      margin-left: 3rem;
-    }
-  }
+  // .modal-title {
+  //   flex: 1 1 auto;
+  //   // @extend .h3;
+  //   // @extend .gap-3;
+  //   gap: 1rem;
+  //   margin: 0;
+  //   &.centered{
+  //     justify-content: center;
+  //     flex-direction: column;
+  //     text-align: center;
+  //     // @extend .justify-content-center; 
+  //     // @extend .flex-column; 
+  //     // @extend .text-center; 
+  //     margin-left: 3rem;
+  //   }
+  // }
   
-  .modal-close {
-    flex: 0 0 auto;
-    display: flex;
-    align-items: center;
-    &.centered{
-      // @extend .align-self-start;
-      align-self: flex-start;
-      margin-top: -0.5rem;
-    }
-  }
+  // .modal-close {
+  //   flex: 0 0 auto;
+  //   display: flex;
+  //   align-items: center;
+  //   &.centered{
+  //     // @extend .align-self-start;
+  //     align-self: flex-start;
+  //     margin-top: -0.5rem;
+  //   }
+  // }
 
-  .modal-body {
-    flex: 1 1 auto;
-    padding: var(--sgds-modal-padding);
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-  }
+  // .modal-body {
+  //   flex: 1 1 auto;
+  //   padding: var(--sgds-modal-padding);
+  //   overflow: auto;
+  //   -webkit-overflow-scrolling: touch;
+  // }
 
-  .modal-footer {
-    flex: 0 0 auto;
-    text-align: right;
-    padding: var(--sgds-modal-padding);
-    padding-top:0;
-    &.centered{
-      text-align: center;
-    }
-  }
+  // .modal-footer {
+  //   flex: 0 0 auto;
+  //   text-align: right;
+  //   padding: var(--sgds-modal-padding);
+  //   padding-top:0;
+  //   &.centered{
+  //     text-align: center;
+  //   }
+  // }
 
   .modal-footer ::slotted(sgds-button) {
     margin-inline-start: 0.5rem;
