--- a/src/components/Modal/sgds-modal.scss
+++ b/src/components/Modal/sgds-modal.scss
@@ -1,10 +1,12 @@
   :host {
     --sgds-modal-width: 35rem;
+    --sgds-modal-height: auto;
     --sgds-modal-z-index: 1055;
     --sgds-modal-padding: 1.5rem;
     --sgds-modal-border-radius: 5px;
     --sgds-modal-border-width: 1px;
     --sgds-modal-overlay-color:rgba(0,0,0,0.5);
+    --sgds-modal-background-color: white;
     display: contents;
   }
 
@@ -24,7 +26,6 @@
     left: 0;
     z-index: 1050;
     font-family: var(--sgds-body-font-family);
-    border: 1px solid blue;
     
   }
 
@@ -36,13 +37,12 @@
   .modal-panel {
     display: flex;
     flex-direction: column;
-    // margin-top: 1.75rem;
-    border: 1px solid red;
     z-index: var(--sgds-modal-z-index);
     width: var(--sgds-modal-width);
+    height: var(--sgds-modal-height);
     max-width: calc(100% - 2.25rem);
     max-height: calc(100% - 2.25rem);
-    background-color: white;
+    background-color: var(--sgds-modal-background-color);
     border-radius: var(--sgds-modal-border-radius);
   }
 
@@ -57,11 +57,11 @@
     }
   }
 
-  // .modal--open .modal-panel {
-  //   display: flex;
-  //   opacity: 1;
-  //   transform: none;
-  // }
+  .modal--open .modal-panel {
+    display: flex;
+    opacity: 1;
+    transform: none;
+  }
 
   .modal-header {
     flex: 0 0 auto;
@@ -90,9 +90,6 @@
       justify-content: center;
       flex-direction: column;
       text-align: center;
-      // @extend .justify-content-center; 
-      // @extend .flex-column; 
-      // @extend .text-center; 
       margin-left: 3rem;
     }
   }
@@ -102,7 +99,6 @@
     display: flex;
     align-items: center;
     &.centered{
-      // @extend .align-self-start;
       align-self: flex-start;
       margin-top: -0.5rem;
     }
