--- a/src/components/Modal/sgds-modal.scss
+++ b/src/components/Modal/sgds-modal.scss
@@ -1,12 +1,12 @@
   :host {
-    --sgds-modal-width: 35rem;
-    --sgds-modal-height: auto;
-    --sgds-modal-z-index: 1055;
-    --sgds-modal-padding: 1.5rem;
-    --sgds-modal-border-radius: 5px;
-    --sgds-modal-border-width: 1px;
-    --sgds-modal-overlay-color:rgba(0,0,0,0.5);
-    --sgds-modal-background-color: white;
+    --modal-padding: 1.5rem;
+    --modal-panel-z-index: 1055;
+    --modal-panel-width: 35rem;
+    --modal-panel-height: auto;
+    --modal-panel-background-color: white;
+    --modal-panel-border-radius: 5px;
+    --modal-header-bottom-border-line-width: 1px;
+    --modal-overlay-background-color:rgba(0,0,0,0.5);
     display: contents;
   }
 
@@ -37,13 +37,13 @@
   .modal-panel {
     display: flex;
     flex-direction: column;
-    z-index: var(--sgds-modal-z-index);
-    width: var(--sgds-modal-width);
-    height: var(--sgds-modal-height);
+    z-index: var(--modal-panel-z-index);
+    width: var(--modal-panel-width);
+    height: var(--modal-panel-height);
     max-width: calc(100% - 2.25rem);
     max-height: calc(100% - 2.25rem);
-    background-color: var(--sgds-modal-background-color);
-    border-radius: var(--sgds-modal-border-radius);
+    background-color: var(--modal-panel-background-color);
+    border-radius: var(--modal-panel-border-radius);
   }
 
   .modal-panel:focus {
@@ -71,9 +71,9 @@
     line-height: 1.33;
     font-size: calc(1.275rem + 0.3vw);
     display: flex;
-    padding: var(--sgds-modal-padding);
+    padding: var(--modal-padding);
     align-items: center;
-    border-bottom: var(--sgds-modal-border-width) solid var(--sgds-gray-400, #98a2b3);
+    border-bottom: var(--modal-header-bottom-border-line-width) solid var(--sgds-gray-400, #98a2b3);
     &.centered{
       border-bottom: 0;
       padding-bottom: 0;
@@ -106,7 +106,7 @@
 
   .modal-body {
     flex: 1 1 auto;
-    padding: var(--sgds-modal-padding);
+    padding: var(--modal-padding);
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     &.centered{
@@ -117,7 +117,7 @@
   .modal-footer {
     flex: 0 0 auto;
     text-align: right;
-    padding: var(--sgds-modal-padding);
+    padding: var(--modal-padding);
     padding-top:0;
     &.centered{
       text-align: center;
@@ -139,5 +139,5 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: var(--sgds-modal-overlay-color);
+    background-color: var(--modal-overlay-background-color);
   }
