refactor(breadcrumb): jsdocs, remove separator css content in favour of slot

--- a/src/components/Breadcrumb/sgds-breadcrumb.scss
+++ b/src/components/Breadcrumb/sgds-breadcrumb.scss
@@ -1,21 +1,12 @@
-:host{
-    --sgds-breadcrumb-seperator: "/";
-}
-
-.breadcrumb-item{
-    display: inline-block;
-}
-
-::slotted(.sgds-breadcrumb-seperator){
+slot[name=separator]::slotted(*){
     display: inline-block;
     align-items: center;
     padding-left: 0.25rem;
     padding-right: 0.5rem;
-    &:before{
-        content: var(--sgds-breadcrumb-seperator);
-    }
 }
+
 
 :host(:last-of-type) .breadcrumb-item__separator {
     display: none;
 }
+
