--- a/src/components/Datepicker/sgds-datepicker-calendar.scss
+++ b/src/components/Datepicker/sgds-datepicker-calendar.scss
@@ -11,8 +11,8 @@
   }
 }
 
-.monthpicker,
-.yearpicker {
+.sgds.monthpicker,
+.sgds.yearpicker {
   display: grid;
   grid-template-columns: repeat(3, 48px);
   grid-template-rows: repeat(4, 48px);
