style(color): add theme color variables

--- a/src/base/sgds-element.scss
+++ b/src/base/sgds-element.scss
@@ -9,9 +9,13 @@ $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
     font-size: var(--sgds-body-font-size, $font-size-base);
     font-weight: var(--sgds-body-font-weight, $font-weight-base);
     line-height: var(--sgds-body-line-height, $line-height-base);
-
+    // Generates all rgb color declared in the $theme-colors from _variables.scss
     @each $color, $value in $theme-colors-rgb {
+        
         --sgds-#{$color}-rgb : #{$value};
     }
-
+    @each $color, $value in $theme-colors {
+        
+        --sgds-#{$color} : #{$value};
+    }
 }
