docs(toast): add storybook wip

--- a/src/components/Toast/sgds-toast-container.scss
+++ b/src/components/Toast/sgds-toast-container.scss
@@ -1,5 +1,8 @@
+:host{
+    --toast-container-slot-elements-gap: 0.5rem
+}
 slot {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: var(--toast-container-slot-elements-gap);
 }
