--- a/src/components/Stepper/sgds-stepper.scss
+++ b/src/components/Stepper/sgds-stepper.scss
@@ -1,56 +1,52 @@
-:host{
-    --sgds-stepper-theme-color: var(--sgds-primary);
-    --sgds-stepper-theme-hover-color: var(--sgds-primary-600);
-    --sgds-stepper-default-color: var(--sgds-gray-400);
+:host {
+  --sgds-stepper-theme-color: var(--sgds-primary);
+  --sgds-stepper-theme-hover-color: var(--sgds-primary-600);
+  --sgds-stepper-default-color: var(--sgds-gray-400);
 }
 
-.sgds{
-    &.stepper{
-        .stepper-item {
-            > .stepper-marker{
-                background-color: var(--sgds-stepper-default-color);
-                border-color: var(--sgds-gray-100)
-            }
-            &.is-active{
-                .stepper-marker{
-                    background-color: var(--sgds-gray-100);
-                    border-color: var(--sgds-stepper-theme-color);
-                    color: var(--sgds-stepper-theme-color);
-                }
-            }
-
-            &.is-completed{
-                .stepper-marker{
-                    background-color: var(--sgds-stepper-theme-color);
-                    border-color: var(--sgds-stepper-theme-color);
-                    color: var(--sgds-gray-100);
-                }
-            }
-            // .sgds.stepper .stepper-item.is-clickable:hover .stepper-marker
-            &.is-clickable{
-                &:hover {
-                    .stepper{
-                        &-marker{
-                            background-color: var(--sgds-stepper-theme-hover-color);
-                            border-color: var(--sgds-stepper-theme-hover-color);
-                        }
-                        &-detail{
-                            > *{
-                                color: var(--sgds-stepper-theme-hover-color);
-                            }
-                            
-                        }
-                    }
-                }
-            }
-            
-            &::before{
-                background: linear-gradient(270deg, var(--sgds-stepper-default-color) 50%, var(--sgds-stepper-theme-color) 0px) 100% 100% / 200% 100%;
-            }
+.sgds {
+  &.stepper {
+    .stepper-item {
+      > .stepper-marker {
+        background-color: var(--sgds-stepper-default-color);
+        border-color: var(--sgds-gray-100);
+      }
+      &.is-active {
+        .stepper-marker {
+          background-color: var(--sgds-gray-100);
+          border-color: var(--sgds-stepper-theme-color);
+          color: var(--sgds-stepper-theme-color);
         }
-    }
-}
+      }
 
-slot {
-    display: none;
+      &.is-completed {
+        .stepper-marker {
+          background-color: var(--sgds-stepper-theme-color);
+          border-color: var(--sgds-stepper-theme-color);
+          color: var(--sgds-gray-100);
+        }
+      }
+      // .sgds.stepper .stepper-item.is-clickable:hover .stepper-marker
+      &.is-clickable {
+        &:hover {
+          .stepper {
+            &-marker {
+              background-color: var(--sgds-stepper-theme-hover-color);
+              border-color: var(--sgds-stepper-theme-hover-color);
+            }
+            &-detail {
+              > * {
+                color: var(--sgds-stepper-theme-hover-color);
+              }
+            }
+          }
+        }
+      }
+
+      &::before {
+        background: linear-gradient(270deg, var(--sgds-stepper-default-color) 50%, var(--sgds-stepper-theme-color) 0px)
+          100% 100% / 200% 100%;
+      }
+    }
+  }
 }
