--- a/src/components/Tab/sgds-tab.scss
+++ b/src/components/Tab/sgds-tab.scss
@@ -1,55 +1,70 @@
-// @import '../../utils/components.style';
-// @import '../../utils/base.scss';
-//default navlink
-li.nav-item{
-  button.nav-link.tabs-info-toggle{
-    padding: 0.75rem;
-    border-radius: 0.3125rem;
-    color: #1d2939;
-    background-color: #fff;
-    border: 1px solid #98a2b3;
-    min-width: 11.875rem;
+li.nav-item {
+  button.nav-link {
+    &.tabs-info-toggle {
+      padding: 0.75rem;
+      border-radius: 0.3125rem;
+      color: #1d2939;
+      background-color: #fff;
+      border: 1px solid #98a2b3;
+      min-width: 11.875rem;
       .tabs-info {
-      &-label {
-        display: flex;
-        text-align: right;
-        justify-content: flex-end;
-        &.has-icon {
-          justify-content: space-between;
+        &-label {
+          display: flex;
+          text-align: right;
+          justify-content: flex-end;
+          &.has-icon {
+            justify-content: space-between;
+          }
+        }
+        &-count {
+          text-align: right;
         }
       }
-      &-count {
-        text-align: right;
+      &.active,
+      &:hover {
+        border-color: purple; //$primary;
+        color: purple; //$primary;
+        font-weight: 700; //$font-weight-bold;
       }
     }
-    &.active,&:hover{
-      border-color: purple;//$primary;
-      color: purple;//$primary;
-      font-weight: 700;//$font-weight-bold;
-  }
-  }
-
-  button.nav-link.tabs-basic-toggle{
-    padding: initial;
-    border: 1px solid #98A2B3;//$gray-400;
-    border-radius: 0;
-    padding: 0.5rem 1.5rem;
-    color: #1D2939; //$body-color;
-    background-color: #fff; //$white;
-    i,span{
-        &.left{
-            margin-right: 1rem;//$nav-sgds-tabs-icon-padding;
+    &.tabs-basic-toggle {
+      padding: initial;
+      border: 1px solid #98a2b3; //$gray-400;
+      border-radius: 0;
+      padding: 0.5rem 1.5rem;
+      color: #1d2939; //$body-color;
+      background-color: #fff; //$white;
+      i,
+      span {
+        &.left {
+          margin-right: 1rem; //$nav-sgds-tabs-icon-padding;
         }
-        &.right{
-            margin-left: 1rem;//$nav-sgds-tabs-icon-padding;
+        &.right {
+          margin-left: 1rem; //$nav-sgds-tabs-icon-padding;
         }
+      }
+      &.active,
+      &:hover {
+        color: #fff; //$white;
+        background-color: #0f71bb; //$link-color;
+      }
     }
-    &.active,&:hover{
-        color: #fff;//$white;
-        background-color: #0F71BB;//$link-color;
+    &:not(.tabs-basic-toggle):not(.tabs-info-toggle) {
+      padding-top: 0;
+      padding-left: 0;
+      padding-right: 0;
+      background-color: transparent;
+      color: #1d2939; //$body-color
+      border-color: transparent;
+      border: none;
+      // min-width: 11.875rem;
+      &.active {
+        border-bottom: 0.125rem solid #0f71bb; // $navbar-border-bottom-height solid $link-color;
+        font-weight: 700; // $font-weight-bold;
+        background-color: transparent;
+      }
     }
   }
-
 }
 
 // button.nav-link {
