--- a/src/components/Tab/sgds-tab.scss
+++ b/src/components/Tab/sgds-tab.scss
@@ -3,8 +3,9 @@
   display: inline-block;
 
 }
+
 li.nav-item {
-  button.nav-link {
+  div.nav-link {
     &.tabs-info-toggle {
       padding: 0.75rem;
       border-radius: 0.3125rem;
