chore(*): lint fixes

--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -1,12 +1,11 @@
 import SgdsElement from "../../base/sgds-element";
 import { html } from "lit";
-import { customElement } from "lit/decorators.js";
 
-
-@customElement("sgds-{{kebabCase main-component-name}}")
 export class Sgds{{main-component-name}} extends SgdsElement {
 
     render(){
         return html``
     }
 }
+
+export default Sgds{{main-component-name}};
