--- a/plop-templates/test.hbs
+++ b/plop-templates/test.hbs
@@ -1,5 +1,7 @@
 import { html } from "lit";
 import {expect } from "@open-wc/testing";
+import { Sgds{{main-component-name}} } from "../src/components/{{main-component-name}}";
 
+customElements.define("sgds-{{kebabCase main-component-name}}", Sgds{{main-component-name}});
 
-describe("<sgds-{{kebabCase main-component-name}}>", () => {})
+describe("<sgds-{{kebabCase main-component-name}}>", () => {});
