style(datepicker): fix bg color for month and year view

--- a/src/components/Datepicker/sgds-datepicker-calendar.scss
+++ b/src/components/Datepicker/sgds-datepicker-calendar.scss
@@ -22,10 +22,11 @@
 }
 
 
-.month,
-.year {
+button.month,
+button.year {
   padding: 0;
   border: 0;
+  background-color: transparent;
   &.active,
   &:hover {
     cursor: pointer;
