refactor(datepicker): housekeeping
remove sgds prefix for internal components to prevent parsing from cem

rename files to follow naming of class objects

register ce before test runs

remove duplicate noFlip prop from sgds-datepicker

cleanup files

--- a/src/components/Datepicker/sgds-datepicker.scss
+++ b/src/components/Datepicker/sgds-datepicker.scss
@@ -1,5 +1,5 @@
-@import "./sgds-datepicker-calendar.scss";
-@import "./sgds-datepicker-header.scss";
+@import "./datepicker-calendar.scss";
+@import "./datepicker-header.scss";
 
 :host {
   --datepicker-theme-color: var(--sgds-primary);
